JumpScript/tests/baselines/reference/parser.numericSeparators.unicodeEscape.errors.txt
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/1.jump(1,7): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/10.jump(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/11.jump(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/13.jump(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/14.jump(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/15.jump(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/17.jump(1,4): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/18.jump(1,4): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/19.jump(1,4): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.jump(1,7): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/21.jump(1,4): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/22.jump(1,4): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/23.jump(1,4): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/25.jump(1,11): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/26.jump(1,11): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/27.jump(1,11): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.jump(1,7): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/37.jump(1,7): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/38.jump(1,7): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/39.jump(1,7): error TS1199: Unterminated Unicode escape sequence.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/41.jump(1,6): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/42.jump(1,6): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/43.jump(1,6): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/45.jump(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/46.jump(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/47.jump(1,5): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.jump(1,6): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.jump(1,6): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/7.jump(1,6): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/9.jump(1,5): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/1.jump (1 errors) ====
    "\u{10_ffff}"
          
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.jump (1 errors) ====
    '\u{10_ffff}'
          
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.jump (1 errors) ====
    `\u{10_ffff}`
          
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.jump (0 errors) ====
    /\u{10_ffff}/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.jump (1 errors) ====
    "\uff_ff"
         
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.jump (1 errors) ====
    '\uff_ff'
         
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/7.jump (1 errors) ====
    `\uff_ff`
         
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/8.jump (0 errors) ====
    /\uff_ff/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/9.jump (1 errors) ====
    "\xf_f"
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/10.jump (1 errors) ====
    '\xf_f'
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/11.jump (1 errors) ====
    `\xf_f`
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/12.jump (0 errors) ====
    /\xf_f/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/13.jump (1 errors) ====
    "\u{_10ffff}"
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/14.jump (1 errors) ====
    '\u{_10ffff}'
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/15.jump (1 errors) ====
    `\u{_10ffff}`
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/16.jump (0 errors) ====
    /\u{_10ffff}/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/17.jump (1 errors) ====
    "\u_ffff"
       
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/18.jump (1 errors) ====
    '\u_ffff'
       
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/19.jump (1 errors) ====
    `\u_ffff`
       
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/20.jump (0 errors) ====
    /\u_ffff/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/21.jump (1 errors) ====
    "\x_ff"
       
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/22.jump (1 errors) ====
    '\x_ff'
       
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/23.jump (1 errors) ====
    `\x_ff`
       
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/24.jump (0 errors) ====
    /\x_ff/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/25.jump (1 errors) ====
    "\u{10ffff_}"
              
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/26.jump (1 errors) ====
    '\u{10ffff_}'
              
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/27.jump (1 errors) ====
    `\u{10ffff_}`
              
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/28.jump (0 errors) ====
    /\u{10ffff_}/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/29.jump (0 errors) ====
    "\uffff_"
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/30.jump (0 errors) ====
    '\uffff_'
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/31.jump (0 errors) ====
    `\uffff_`
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/32.jump (0 errors) ====
    /\uffff_/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/33.jump (0 errors) ====
    "\xff_"
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/34.jump (0 errors) ====
    '\xff_'
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/35.jump (0 errors) ====
    `\xff_`
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/36.jump (0 errors) ====
    /\xff_/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/37.jump (1 errors) ====
    "\u{10__ffff}"
          
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/38.jump (1 errors) ====
    '\u{10__ffff}'
          
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/39.jump (1 errors) ====
    `\u{10__ffff}`
          
!!! error TS1199: Unterminated Unicode escape sequence.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/40.jump (0 errors) ====
    /\u{10__ffff}/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/41.jump (1 errors) ====
    "\uff__ff"
         
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/42.jump (1 errors) ====
    '\uff__ff'
         
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/43.jump (1 errors) ====
    `\uff__ff`
         
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/44.jump (0 errors) ====
    /\uff__ff/u
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/45.jump (1 errors) ====
    "\xf__f"
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/46.jump (1 errors) ====
    '\xf__f'
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/47.jump (1 errors) ====
    `\xf__f`
        
!!! error TS1125: Hexadecimal digit expected.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/48.jump (0 errors) ====
    /\xf__f/u
    